discussion/kv_engine/125919/125919_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

Change compaction to use the PiTR configuration

Change-Id: I0f1b686ff8190d087bba3630b371ca346985a35c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-04-20 09:44:32.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-20 09:53:38.000000000
Message: 
Patch Set 8: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27621/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(1095): error C2660: "cb::couchstore::compact": function does not take 8 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27621/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1791/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1104:17: error: too many arguments to function call, expected 6, have 8 [clang-diagnostic-error]
                oldest.count(),
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/couchstore/include/libcouchstore/couch_db.h:1205:1: note: "compact" declared here
LIBCOUCHSTORE_API
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/couchstore/include/libcouchstore/visibility.h:15:33: note: expanded from macro "LIBCOUCHSTORE_API"
#      define LIBCOUCHSTORE_API __attribute__((visibility("default")))
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1791/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1104:17:
error: too many arguments to function call, expected 6, have 8 [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1791/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23619/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1104:17:
error: too many arguments to function call, expected 6, have 8
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23619/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3226/ : FAILURE

Compile error at [2020-04-20T09:49:22.872Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1105:30:
error: too many arguments to function ?couchstore_error_t cb::couchstore::compact(Db&, const char*, couchstore_compact_flags, cb::couchstore::CompactFilterCallback, cb::couchstore::CompactRewriteDocInfoCallback, FileOpsInterface*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3226/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3208/ : FAILURE

Compile error at [2020-04-20T09:50:17.939Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1105:30:
error: too many arguments to function ?couchstore_error_t cb::couchstore::compact(Db&, const char*, couchstore_compact_flags, cb::couchstore::CompactFilterCallback, cb::couchstore::CompactRewriteDocInfoCallback, FileOpsInterface*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3208/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2270/ : FAILURE

Compile error at [2020-04-20T09:52:33.582Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1104:17:
error: too many arguments to function call, expected 6, have 8
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2270/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3287/ : FAILURE

Compile error at [2020-04-20T09:51:22.016Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1105:30:
error: too many arguments to function ?couchstore_error_t cb::couchstore::compact(Db&, const char*, couchstore_compact_flags, cb::couchstore::CompactFilterCallback, cb::couchstore::CompactRewriteDocInfoCallback, FileOpsInterface*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3287/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11076/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/310/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
